# Logicraft

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.cfg  logicraft.rc  main.cpp  render.cpp  render.hpp  sigmacraft  types.hpp  vcpkg.json  world.cpp  world.hpp
_CPack_Packages/win64/NSIS/: NSIS.InstallOptions.ini  project.nsi
_CPack_Packages/win64/NSIS/Logicraft-2.3.0-win64/: config.cfg
_CPack_Packages/win64/NSIS/Logicraft-2.3.0-win64/maps/: syslog.bulldog
maps/: example map.bulldog  syslog.bulldog
src/: main.cpp  render.cpp  render.hpp  types.hpp  world.cpp  world.hpp
